[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medsbom"
version = "0.1.0"
description = "Open-source FDA/IEC-62304 compliance layer for medical device SBOMs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "MedSBOM Contributors"},
]
keywords = ["sbom", "fda", "medical-device", "iec-62304", "cybersecurity", "compliance", "cve", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62,<70",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx",
    "respx>=0.21,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]
postgres = [
    "psycopg[binary]>=3.1,<4.0",
]

[project.scripts]
medsbom = "medsbom.cli.main:app"

[project.urls]
Homepage = "https://github.com/medsbom/medsbom"
Documentation = "https://github.com/medsbom/medsbom/tree/main/docs"
Repository = "https://github.com/medsbom/medsbom"
Issues = "https://github.com/medsbom/medsbom/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["medsbom"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
